# nu_plugin_from_parquet

./: Cargo.toml  README.md
src/: from_parquet.rs  main.rs
