[package]
name = "nu_plugin_from_parquet"
version = "0.1.0"
authors = ["Jake Swenson <jake@jakeswenson.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-errors = { version = "*" }
nu-plugin = { version = "*" }
nu-protocol = { version = "*" }
nu-source = { version = "*" }
nu-value-ext = { version = "*" }
parquet = "3.0.0"
bigdecimal = "0.2.0"
indexmap = "1.6.1"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]